2000-11-06  Fernando Nasser  <fnasser@cygnus.com>

	From  Steven Johnson  <sbjohnson@ozemail.com.au>:

        This set of changes add "hookpost-" as an expansion on the original
	hooking of commands to GDB. A Hook may now be run "AFTER" execution of
	a command as well as before.

	* command.h (struct cmd_list_element): Changed elements hook and hookee
	to hook_pre and hookee_pre respectively. Added hook_post and hookee_post
	for the post hook command operation. Added hook_in so that an executing
	hook can be flagged to prevent recursion.
	* command.c (add_cmd): Changed initilization of cmd_list_element to
	reflect above changes.
	(delete_cmd): Remove both pre and post hooks.
	(help_cmd): Notify that the command has pre and/or post hooks.
	* infrun.c (normal_stop): Change references to hook_pre from hook.
	* top.c (execute_command): Run both pre and post hooks.
	(define_command): Allow definition of both pre and post hooks.
	The definition of pre-hooks is done as before, with the "hook-"
	prefix for backward compatibility.

2000-11-06  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* stack.c (return_command):  Pop dummy frame if we just returned from
	a stop in a call dummy.

2000-11-05  Kevin Buettner  <kevinb@redhat.com>

	* v850-tdep.c (handle_prepare, handle_pushm): Remove extraneous
	blank line after function declarator.
	* v850ice.c (v850ice_xfer_memory, do_gdb): Protoize.

2000-11-03  Kevin Buettner  <kevinb@redhat.com>

	* utils.c (add_continuation, add_intermediate_continuation,
	printchar): Protoize.

2000-11-03  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2read.c (new_symbol): Relocate address of symbol by the
	base address of the section it is in rather than always using
	the base address of the .text section.

2000-11-01  J.T. Conklin  <jtc@redback.com>

	* TODO: Note abstraction layer violation where "ocd reset" command
	must invalidate the dcache, and how this might be fixed.

	* monitor.c (#include "dcache.h"): Removed.